2 ultime aggiunte discusse messe. Sì, in ita! :)

--- a/TeX_files/problem2.tex
+++ b/TeX_files/problem2.tex
@@ -104,7 +104,7 @@ Unfortunately, if till this point the simulations seemed to be very encouraging,
 \par\medskip
 \noindent
 
-In the following figures: the globally best result we obtained in \textit{Microwave Studio}, not bad in terms of tapering, but not precise at all in terms of resonance frequency-
+In the following figures: the globally best result we obtained in \textit{Microwave Studio}, not bad in terms of tapering, but not precise at all in terms of resonance frequency:
 
 \begin{figure}[H]
 \centering
@@ -143,4 +143,4 @@ In the following figures: the globally best result we obtained in \textit{Microw
 
 \par\medskip
 \noindent
-We also tried to simulate the behavior of the BFN when attached to the patches, but, since the tapering was not the good one we had hoped for, the SLL wasn't completely tuned on the -20 dB level either. Good notes are the fact that the radiated field happened to be broadside, meaning that the phasing, at least, was correct, and that the resonce frequency, even if not perfect, happened to be more precise in this case.
+We also tried to simulate the behavior of the BFN when attached to the patches, but, since the tapering was not the good one we had hoped for, the SLL wasn't completely tuned on the -20 dB level either. Good notes are the fact that the radiated field happened to be broadside, meaning that the phasing, at least, was correct, and that the resonance frequency, even if not perfect, happened to be more precise in this case. A more specific and precise analysis of the obtained AF will be discussed in the last part.
