--- a/TeX_files/introduction.tex
+++ b/TeX_files/introduction.tex
@@ -17,4 +17,4 @@ The second part is related to the simulation of the BFN. It is worth to anticipa
 
 \par\medskip
 \noindent
-The third and last part deals with the simulation of the radiating structure of the array. First, a further optimization of the single patch was carried out, in order to get the most close as possible to the prescribed 120 $\Omega$ impedance and 2.45 GHz resonance. Then, the patches are put together in order to verify how they behave when assembled in order to form the array, to see how they mutually influence each other.
+The third and last part deals with the simulation of the radiating structure of the array. First, a further optimization of the single patch was carried out, in order to get the most close as possible to the prescribed 120 $\Omega$ impedance and 2.45 GHz resonance. Then, the patches are put together in order to verify how they behave when assembled in order to form the array, to see how they mutually influence each other. We have to mention that even in this case simulation was not straightforward and the problems encountered in the second part about long simulation time and difficulty on tuning were present even in this case, so that the results hopefully should be, even in this case, susceptible to further perfectioning.
