--- a/TeX_files/problem1.tex
+++ b/TeX_files/problem1.tex
@@ -244,12 +244,12 @@ The conversion from ideal microstrip to layout can be found in table 6, whereas 
 \subsection{Complete BFN with dimensions}
 
 Now that all the main components have been optimized the following step includes the merging of all the sections as shown if figure \ref{fig:p1_bfn_compl1}.
-To connect splitter1 with splitter2 we used a 50$\Omega$ line bent in order to be compliant with the radiators' spacing specification. The bend has been chosen with mitered topology, to reduce parasitics. Furthermore, the 50$\Omega$ and 120$\Omega$ lines parallel to the y axis are kept short to reduce the space occupied by the BFN. Within the following paragraph the performed beam forming network simulation will be presented.
+To connect splitter1 with splitter2 we used a 50$\Omega$ line bent in order to be compliant with the radiators' spacing specification. The bend has been chosen with mitered topology, to reduce parasitics. Furthermore, the 50$\Omega$ and 120$\Omega$ lines parallel to the y axis are kept short to reduce the space occupied by the BFN. 
+Finally the whole structure has been finely tuned and optimized to obtain the best performances. A full set of quoted schematics is grouped from figure \ref{fig:p1_bfn_quot5} to figure \ref{fig:p1_bfn_quot4}. Within the following paragraph all the simulations will be presented.
 
-All the beam forming network dimensions are grouped from figure \ref{fig:p1_bfn_quot5} to figure \ref{fig:p1_bfn_quot4}.
 \begin{figure}[t] 
 	\centering
-	\includegraphics[scale=0.5]{p1_bfn_quot5}
+	\includegraphics[scale=0.5]{DavideTsundere}
 	\caption{Here are highlighted the quoted regions. }
 	\label{fig:p1_bfn_quot5}
 \end{figure}
@@ -263,7 +263,7 @@ All the beam forming network dimensions are grouped from figure \ref{fig:p1_bfn_
 
 \begin{figure}[H] 
 	\centering
-	\includegraphics[scale=0.7,angle=90]{p1_bfn_quot1}
+	\includegraphics[scale=0.6,angle=90]{p1_bfn_quot1}
 	\caption{Quoted BFN: region D. }
 	\label{fig:p1_bfn_quot1}
 \end{figure}
