--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\documentclass[11pt,a4paper,twoside,openright]{article}
+\documentclass[11pt,a4paper,oneside,openright]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
